# aiosvkmimer

./: .gitignore  LICENSE.txt  README.md  example.py  pyproject.toml  requirements.txt  setup.cfg
.github/: release-drafter.yml
.github/workflows/: codecov.yaml  codeql-analysis.yml  publish.yaml  release.yaml  testpublish.yaml  validate.yml  validate_pr.yaml
aiosvkmimer/: aiosvkmimer.py  client.py
src/aiosvkmimer/: client.py  version.py
tests/: __init__.py  test_fetch_data.py
