[project]
name = "aiosvkmimer"
version = "{{VERSION_PLACEHOLDER}}"
authors = [
    { name="Robin Ostlund", email="me@robinostlund.name" }
]
description = "Asyncio library for SVK Mimer"
readme = "README.md"
requires-python = ">3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/robinostlund/aiosvkmimer"
"Bug Tracker" = "https://github.com/robinostlund/aiosvkmimer/issues"

[build-system]
requires = [
    "setuptools>=65"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["aiosvkmimer"]

[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
asyncio_mode = "strict"
testpaths = ["tests"]
python_files = ["*_test.py"]